# zsh-jupyter-kernel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  pytest.yml
docs/: build-install-publish.md
zsh_jupyter_kernel/: config.py
