[project]
name = "zsh-jupyter-kernel"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Z shell kernel for Project Jupyter"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.md"]
authors = [{ name = "Danylo Dubinin", email = "danylo.dubinin@gmail.com" }]
keywords = ["jupyter", "zsh", "shell"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Unix Shell",
    "Topic :: System :: Shells",
]
dependencies = ["ipykernel", "jupyter_client", "pexpect"]

[dependency-groups]
dev = ["jupyterlab", "jsonschema", "pytest"]
[project.urls]
"Homepage" = "https://github.com/dahn-zk/zsh-jupyter-kernel"
"Repository" = "https://github.com/dahn-zk/zsh-jupyter-kernel.git"
"Changelog" = "https://github.com/dahn-zk/zsh-jupyter-kernel/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["zsh_jupyter_kernel"]
[tool.setuptools.dynamic]
version = { file = "zsh_jupyter_kernel/version.txt" }
[tool.setuptools.package-data]
zsh_jupyter_kernel = ["version.txt", "capture.zsh", "banner.txt", "logo.png",
    "logo-32x32.png", "logo-64x64.png"]